<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name:</string>
    <string name="full_name">Full Name</string>
    <string name="number">Number:</string>
    <string name="phone_number">Phone Number</string>
    <string name="pax">Pax:</string>
    <string name="pax_no">Number of Pax</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
</resources>